[lib]
name = "maelstrom"

[package]
authors = ["Shriram Balaji <hello@shrirambalaji.com>"]
categories = [
    "asynchronous",
    "concurrency",
    "network-programming",
    "distributed-systems",
    "broadcast",
    "gossip",
    "simulation",
]
description = "Maelstrom node for broadast"
keywords = ["maelstrom", "distributed-systems", "testing"]
license = "EPL-2.0"
edition = "2021"
name = "maelstrom-node"
readme = "README.md"
repository = "https://github.com/shrirambalaji/maelstrom-node"
version = "0.1.6"

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "2.0.12"
tokio = { version = "1.27.0", features = ["full"] }

[lints]
clippy.unused_results = "warn"
